# vix-core

./: ChangeLog  Makefile.am  README.md  configure.ac  fi.po
.github/workflows/: coreplugin.yml  vixbot.yml
CI/: build.sh
etc/: Makefile.am
etc/cron/: Makefile.am
etc/cron/crontabs/: Makefile.am  readme.txt
m4/: ax_python_devel.m4
po/: Makefile.am  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  es.po  et.po  fa.po  fi.mo  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  updateallpo-multiOS.sh  (+3 more)
src/: BackupManager.py  IPKInstaller.py  ImageManager.py  MountManager.py  Multibootmgr.py  RestoreWizard.py  SoftcamManager.py  SwapManager.py  plugin.py  ui.py
trunk/: Makefile.am  acinclude.m4  configure.ac
trunk/VIX/: BackupManager.py  CCcamInfo.py  CronManager.py  DeviceManager.py  EPG.py  IPKInstaller.py  ImageManager.py  Makefile.am  MountManager.py  OScamInfo.py  PowerManager.py  RestoreWizard.py  ScriptRunner.py  SoftcamManager.py  SoftwareManager.py  SoftwareTools.py  SwapManager.py  __init__.py  plugin.py  restorewizard.xml  ui.py
trunk/VIX/VIXEPG/: Makefile.am
trunk/VIX/VIXEPG/skins/: Makefile.am  Normal_1024.xml  Normal_1280.xml  Normal_720.xml  PictureInGraphics_1024.xml  PictureInGraphics_1280.xml  PictureInGraphics_720.xml
trunk/VIX/po/: CronManager.fr.mo  CronManager.po  CronManager.po.fr  CronManager.po.ur  CronManager.ur.mo  DeviceManager.po  IPKInstaller.po  ImageManager.po  NetworkManager.po  SoftcamManager.po  SwapManager.po  VIXMainMenu.po
trunk/po/: Makefile.am  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  en.po  en_GB.po  (+149 more)
trunk/python2.6/: Makefile.am  process.py
trunk/src/: BackupManager.py  CronManager.py  ImageManager.py  MountManager.py  PowerManager.py  SoftwareManager.py  SoftwareTools.py  SwapManager.py  __init__.py  plugin.py  ui.py
