installdir = $(LIBDIR)/enigma2/python/Plugins/SystemPlugins/ViX
SUBDIRS = VIXEPG
install_DATA = hd.png sd.png
install_PYTHON = CCcamInfo.py \
		OScamInfo.py \
		CronManager.py \
		MountManager.py \
		ImageManager.py \
		__init__.py \
		IPKInstaller.py \
		plugin.py \
		SoftcamManager.py \
		SwapManager.py \
		ScriptRunner.py \
		EPG.py \
		PowerManager.py
